Adding generate_release_notes to action-gh-release #patch

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,3 +72,4 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ steps.meta.outputs.tag }}
+          generate_release_notes: true
