Added GitHub SSH Key Support

--- a/app/answers/01:23:45:67:89:ab.toml
+++ b/app/answers/01:23:45:67:89:ab.toml
@@ -12,3 +12,6 @@ source = "from-dhcp"
 
 [disk-setup]
 filesystem = "ext4"
+
+[custom]
+github_username = "Octocat" # Will add this user's GitHub public key(s) to global.root_ssh_keys[].
